Use query params too for page adding handler
