# api/openapi.yaml
@@ -22,6 +22,23 @@ paths:
     post:
       operationId: addPage
       summary: Add new page
+      parameters:
+        - in: query
+          name: url
+          schema:
+            type: string
+        - in: query
+          name: description
+          schema:
+            type: string
+        - in: query
+          name: formats
+          style: form
+          explode: false
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/format'
       requestBody:
         content:
           application/json:
